# cse220_spring2023_hw0

./: .gitignore  Makefile  hw0.c  hw0.h  main.c  tests.c
Criterion/: .gitignore  meson_options.txt
